Added recipe to local storage so visiting same recipe with the same id saves looking up the API by id. Changed recipe summary to be next to picture. Started working on pagination for the recipe search results component.

--- a/ReactRecipes/ClientApp/src/custom.css
+++ b/ReactRecipes/ClientApp/src/custom.css
@@ -12,3 +12,12 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.instruction-list {
+    list-style-position: outside;
+    padding-left: 15px;
+}
+
+/*.instruction-list li {
+    padding-left: 10px;
+}*/
