--- a/ReactRecipes/ClientApp/src/custom.css
+++ b/ReactRecipes/ClientApp/src/custom.css
@@ -2,6 +2,12 @@
 a {
   color: #0366d6;
 }
+a:hover {
+    cursor: pointer;
+}
+.page-item.active a {
+    cursor:default;
+}
 
 code {
   color: #E01A76;
