--- a/ReactRecipes/ClientApp/src/components/NavMenu.css
+++ b/ReactRecipes/ClientApp/src/components/NavMenu.css
@@ -2,6 +2,10 @@
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  font-size: 24px;
+  letter-spacing: 1px;
+  font-family: 'McLaren',cursive;
+
 }
 
 html {
@@ -15,4 +19,14 @@ html {
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.navbar {
+  padding: 1rem 0;
+}
+
+.nav-link {
+  font-size: 18px;
+  letter-spacing: 1px;
+  font-weight: bold;
 }
